# Thrive

./: .clang-format  CMakeLists.txt  Thrive.csproj  Thrive.sln.DotSettings  project.godot
Scripts/: CodeChecks.cs  Scripts.csproj
simulation_parameters/: Constants.cs  SimulationParameters.cs
src/early_multicellular_stage/: CellType.cs  EarlyMulticellularSpecies.cs  Microbe.Multicellular.cs
src/engine/: DebugDrawer.cs  EntityReference.cs  IAttachableEntity.cs  IPhysicsEntity.cs  ISimulatedEntity.cs  PostShutdownActions.cs  SimulatedEntity.cs  StartupActions.cs
src/general/: IAliveTracked.cs  IEntity.cs  IEntityBase.cs  ISimulatedEntityWithDirectVisuals.cs  ITimedLife.cs  TimedLifeSystem.cs
src/gui_common/: FocusGrabber.cs
src/industrial_stage/: IndustrialStage.cs
src/late_multicellular_stage/: MulticellularCreature.cs  MulticellularStage.cs
src/microbe_stage/: AgentProjectile.cs  AgentProperties.cs  Biome.cs  ChunkConfiguration.cs  CompoundBag.cs  EnergyBalanceInfoFull.cs  EnergyBalanceInfoSimple.cs  FloatingChunk.cs  IEngulfable.cs  ISpawned.cs  Membrane.cs  Microbe.cs  (+15 more)
src/native/: CMakeLists.txt  Include.h.in
src/native/core/: Logger.cpp  Logger.hpp  RefCounted.cpp  RefCounted.hpp
src/native/interop/: CInterop.cpp  CInterop.h  CStructures.h  Interop.cs  JVec3.cs  JoltTypeConversions.hpp  NativeInterop.cs  NativeLibraryHandler.cs  NativeMethods.cs
src/native/physics/: AxisLockConstraint.cpp  AxisLockConstraint.hpp  BodyActivationListener.cpp  BodyControlState.hpp  ContactListener.cpp  ContactListener.hpp  DebugDrawForwarder.cpp  DebugDrawForwarder.hpp  Layers.hpp  PhysicalWorld.cpp  PhysicalWorld.hpp  PhysicsBody.cpp  PhysicsBody.hpp  PhysicsCollision.hpp  ShapeCreator.cpp  ShapeCreator.hpp  TrackedConstraint.cpp  TrackedConstraint.hpp
test/: PhysicsTest.cs  PhysicsTest.tscn
(+53 files in other folders)
